js/src/tests/test262/built-ins/Error/prototype/toString/15.11.4.4-8-1.js
var
errObj
=
new
Error
(
"
ErrorMessage
"
)
;
errObj
.
name
=
"
"
;
assert
.
sameValue
(
errObj
.
toString
(
)
"
ErrorMessage
"
'
errObj
.
toString
(
)
'
)
;
reportCompare
(
0
0
)
;
